// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus segment-refs schematics: ng-add Segment-refs feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { SegmentRefsModule } from "@spartacus/segment-refs";

@NgModule({
  declarations: [],
  imports: [
    SegmentRefsModule
  ]
})
export class SegmentRefsFeatureModule { }
"
`;

exports[`Spartacus segment-refs schematics: ng-add Segment-refs feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';

@NgModule({
  declarations: [],
  imports: [
  ],
  providers: []
})
export class SegmentRefsFeatureModule { }
"
`;

exports[`Spartacus segment-refs schematics: ng-add Segment-refs feature general setup should add the feature using the lazy loading syntax 2`] = `
"import { NgModule } from '@angular/core';
import { SegmentRefsModule } from "@spartacus/segment-refs";
import { PersonalizationModule } from "@spartacus/tracking/personalization";

@NgModule({
  declarations: [],
  imports: [
    PersonalizationModule,
    SegmentRefsModule
  ]
})
export class PersonalizationWrapperModule { }
"
`;
